# TinyVisualizer

./: .gitignore  .gitignore.gitmodules.bak  .gitmodules  .project  CMakeLists.txt  CMakePresets.json  README.md  commit.bat  files.txt  loadAnimation.py  mall_shanghai_0.001500_statistics.txt  setup.py  skinOptimizer.py  utils.py  weightParameterize.py
Drawer/: ArrowShape.cpp  BezierCurveShape.cpp  BezierCurveShape.h  Bullet3DShape.h  Camera3D.cpp  Camera3D.h  Drawer.cpp  Drawer.h  DrawerUtility.h  FBO.cpp  FBO.h  MakeMesh.h  MeshShape.h  SceneStructure.cpp  SceneStructure.h  TerrainShape.cpp  TerrainShape.h  Texture.cpp  Texture.h  VisibilityScore.cpp
Main/: imgui.ini  mainArrow.cpp  mainBezier.cpp  mainBox2D.cpp  mainBullet3D.cpp  mainCameraThirdPerson.cpp  mainCell.cpp  mainCellCmd.cpp  mainChecker.cpp  mainImGui.cpp  mainImGui.py  mainImGuiPlugin.cpp  mainLight.cpp  mainMesh.cpp  mainMultiview.cpp  mainOctree.cpp  mainPatchDeformer.cpp  mainRender.cpp  mainSelection2D.cpp  mainSelection3D.cpp  mainSphericalBox.cpp  mainSphericalBoxAndPoints.cpp  mainTerrain.cpp  mainTerrain.py  mainTexcoord.cpp  mainTextureBaker.cpp  mainVisibility.cpp
Main/glb/: glb_write_test.py  loadAnimation.py  meshMerger.py
Python/: Constants.h  Python.cpp  PythonImgui.h
Swig/: eigen.i  module.i
TextureBaker/: BVHBuilder.cpp  BVHBuilder.h  JTJ.py  MeshVisualizer.cpp  MeshVisualizer.h  NormalBasedTextureBaker.cpp  NormalBasedTextureBaker.h  PatchDeformer.cpp  PatchDeformer.h  RayCaster.cpp  RayCaster.h  SSP.cpp  SSP.h  SSPArea.py  TextureBaker.cpp  TextureBaker.h  TextureExtender.cpp  TextureExtender.h  VisualTextureBaker.cpp  VisualTextureBaker.h  VisualTextureBakerStaggered.cpp  VisualTextureBakerStaggered.h
TinyVisualizer/: ArrowShape.cpp  ArrowShape.h  Background.cpp  Background.h  BezierCurveShape.cpp  BezierCurveShape.h  Box2DShape.cpp  Box2DShape.h  Bullet3DShape.cpp  Bullet3DShape.h  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  CameraExportPlugin.cpp  CameraExportPlugin.h  CameraManipulator.cpp  CameraManipulator.h  CameraThirdPerson.cpp  CameraThirdPerson.h  Capture.cpp  Capture.h  CaptureGIFPlugin.cpp  CaptureGIFPlugin.h  CaptureMPEG2Plugin.cpp  CaptureMPEG2Plugin.h  CapturePlugin.cpp  CapturePlugin.h  CellShape.cpp  CellShape.h  CompositeShape.cpp  CompositeShape.h  DefaultLight.cpp  DefaultLight.h  Drawer.cpp  Drawer.h  DrawerUtility.cpp  DrawerUtility.h  FBO.cpp  FBO.h  (+40 more)
TinyVisualizer/Shader/: BoneTransformVert.h  DebugDrawTexCoordFrag.h  DefaultLightVert.h  DefaultVert.h  MatVecMultVert.h  NormalGeom.h  RoundPointFrag.h  ShadowLightFrag.h  ShadowVert.h  TexCopyFrag.h  ThickLineFrag.h  ThickLineGeom.h  ThickLineVert.h
TinyVisualizer/imgui/: ImGuiHelpers.h  ImGuiTraits.h
cmake/: DisableWarning.cmake  FindAssimp.cmake  FindBox2D.cmake  FindDrawer.cmake  FindEigen3.cmake  FindGLFW.cmake  FindTinyVisualizer.cmake  IncludeTinyVisualizer.cmake  LoadLibs.cmake
include/TinyVisualizer/: CameraManipulator.h  CellShape.h  CompositeShape.h  DefaultFrag.h  DefaultLight.h  DefaultLightFrag.h  DrawerUtility.h  FileDialog.h  MakeMesh.h  MeshShape.h  RoundPointVert.h  SceneStructure.h  ShadowAndLight.h  ShadowFrag.h  ShadowLightVert.h  ShadowLightVertNoNormal.h  XORFrag.h
lib/: glfw3.lib
lib/pkgconfig/: glfw3.pc
tinypng/: png.cc
